<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/activity_edit_deck"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.seniordesign.wolfpack.quizinator.activities.EditDeckActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <io.apptik.widget.multiselectspinner.MultiSelectSpinner
                android:id="@+id/card_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/card_sort_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:spinnerMode="dropdown"
                android:entries="@array/card_sort_list"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="bottom"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_deck_name"
                android:layout_weight="0.5"
                android:textAlignment="center"
                android:text="@string/deck_name"
                android:textSize="@dimen/md_text_size_subheading"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:maxLength="140"
                android:inputType="text" />
            <TextView
                android:layout_weight="0.5"
                android:textAlignment="center"
                android:text="@string/available_cards"
                android:textSize="@dimen/md_text_size_subheading"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/cards_in_deck"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:divider="@android:color/transparent"
                android:dividerHeight="@dimen/array_adapter_padding"
                android:paddingRight="@dimen/edit_deck_spacing"
                android:paddingLeft="0dp"
                android:paddingBottom="@dimen/listview_bottom_padding"
                android:clipToPadding="false"/>

            <ListView
                android:id="@+id/cards_in_database"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:divider="@android:color/transparent"
                android:dividerHeight="@dimen/array_adapter_padding"
                android:paddingRight="0dp"
                android:paddingLeft="@dimen/edit_deck_spacing"
                android:paddingBottom="@dimen/listview_bottom_padding"
                android:clipToPadding="false"/>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        app:srcCompat="@drawable/ic_check_white_24dp"
        android:id="@+id/deck_save_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:onClick="onSaveClick"/>

    <android.support.design.widget.FloatingActionButton
        app:srcCompat="@drawable/ic_remove_btn_24dp"
        android:id="@+id/deck_delete_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:onClick="onDeleteClick"/>
</RelativeLayout>
