<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_card_creation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.seniordesign.wolfpack.quizinator.Activities.CardCreationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/card_type_filter_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="5dp"
            android:entries="@array/card_creation_type_array" />
        <CheckBox
            android:id="@+id/moderator_needed_filter_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
            android:text="@string/moderator_needed_filter" />
        <!--<Spinner-->
            <!--android:id="@+id/moderator_needed_filter_spinner"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:entries="@array/moderator_needed_array" />-->
    </LinearLayout>
    <ListView
        android:id="@+id/list_of_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
